隐私政策相关

--- a/_locales/en/messages.json
+++ b/_locales/en/messages.json
@@ -234,5 +234,9 @@
   "optionsDiscordLink": { 
     "message": "Join our Discord Community!", 
     "description": "Text for the link to the Discord community on the options page." 
-  }
+  },
+   "optionsPrivacyPolicyLink": {
+    "message": "Privacy Policy",
+    "description": "Text for the link to the Privacy Policy page in the options."
+   }
   }
